--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,53 @@ dist
 
 # TernJS port file
 .tern-port
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# misc
+/.sass-cache
+/connect.lock
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# System Files
+.DS_Store
+Thumbs.db
+
+# Output files
+*.d.ts
+lib/
+bundles/
+commonjs/
+amd/
+es2015/
+esm2015/
+fesm2015/
+es2020/
+esm2020/
+fesm2020/
+es2022/
+esm2022/
+fesm2022/
