--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "npm run build:declaration && npm run build:main && npm run build:esm2015 && npm run build:fesm2015 && npm run build:fesm2020",
+    "build": "npm run build:declaration && npm run build:rollup && npm run build:esm2015 && npm run build:esm2020 && npm run build:esm2022",
     "build:declaration": "tsc --project tsconfig.json --declaration true --declarationDir . --emitDeclarationOnly",
     "build:main": "tsc --project tsconfig.json --outDir bundles",
-    "build:commonjs": "tsc --project tsconfig.json --module commonjs --outDir commonjs",
+    "build:cjs": "tsc --project tsconfig.json --module commonjs --outDir cjs",
     "build:amd": "tsc --project tsconfig.json --module amd --outDir amd",
     "build:umd": "tsc --project tsconfig.json --module umd --outDir umd",
     "build:esm2015": "tsc --project tsconfig.json --target es2015 --module es2015 --outDir esm2015",
-    "build:fesm2015": "tsc --project tsconfig.json --target es2015 --module amd --outFile fesm2015/index.ts",
     "build:esm2020": "tsc --project tsconfig.json --target es2020 --module es2020 --outDir esm2020",
-    "build:fesm2020": "tsc --project tsconfig.json --target es2020 --module amd --outFile fesm2020/index.js",
     "build:esm2022": "tsc --project tsconfig.json --target es2022 --module es2022 --outDir esm2022",
-    "build:fesm2022": "tsc --project tsconfig.json --target es2022 --module amd --outFile fesm2022/index.js",
+    "build:rollup": "rollup --config rollup.config.ts",
     "lint": "eslint --ext .ts ./src/**/* --fix"
   },
   "author": {
@@ -36,8 +34,13 @@
   },
   "types": "index.d.ts",
   "main": "bundles/index.js",
+  "module": "fesm2015/index.js",
   "esm2015": "esm2015/index.js",
+  "fesm2015": "fesm2015/index.js",
   "esm2020": "esm2020/index.js",
+  "fesm2020": "fesm2020/index.js",
+  "esm2022": "esm2022/index.js",
+  "fesm2022": "fesm2022/index.js",
   "keywords": [
     "library",
     "lazy",
@@ -46,15 +49,19 @@
   ],
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^16.11.47",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.21.0",
+    "@types/node": "^16.11.56",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
+    "eslint": "^8.22.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.7.0",
+    "eslint-plugin-jest": "^26.8.7",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "rollup": "^2.78.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.33.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   }
 }
