--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,11 @@
     "downlevelIteration": true,
     "noUnusedParameters": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "moduleResolution": "node",
-    "target": "es5",
+    "target": "es2015",
     "module": "es2015",
     "lib": [
-      "es5",
-      "es2015",
       "es2016",
       "es2017",
       "es2018",
